infra/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-deployment
  labels:
    app: HiveBox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: HiveBox
  template:
    metadata:
      labels:
        app: HiveBox
    spec:
      containers:
        - name: hivebox-container
          image: hivebox:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "512M"
              cpu: "500m"
            requests:
              memory: "256M"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /version
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
