infra/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
  labels:
    app: HiveBox
spec:
  type: ClusterIP
  selector:
    app: HiveBox
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
